@@ -1027,7 +1027,10 @@ III) MAJOR CHANGES FROM PREVIOUS RELEASES
        Canon SELPHY ES1
        Canon SELPHY ES2
        Canon SELPHY CP-220
+       Canon SELPHY CP510
        Canon SELPHY CP710
+       Canon SELPHY CP750
+       Canon SELPHY CP800
 
   6) Added Catalan translation.
 
